<resources>
    <string name="app_name">터짐80</string>
    <string name="who">마사지전문</string>
    <string name="tel">010-1234-5678</string>
    <string name="nav_login">콘텐츠</string>
    <string name="nav_raid">레이드</string>
    <string name="nav_chaos">카던</string>
    <string name="nav_bus">버스</string>
    <string name="nav_gold">골드</string>
    <string name="nav_item">아이템</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>